--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,38 +1,16 @@
 .App {
   text-align: center;
 }
+body {
+  --color-black: rgb(15, 15, 15);
+  --color-black-hover: rgb(40, 40, 40);
+  --color-white: white;
+  --color-white-hover: rgb(230, 230, 230);
+  --color-grey: grey;
+  --color-grey-hover: rgb(160, 160, 160);
+  --color-red: rgb(240, 50, 50);
+  --color-red-hover: rgb(240, 100, 100);
+  --color-blue: rgb(30, 160, 200);
+  --color-blue-hover: rgb(100, 160, 200);
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
