styles/nav-home-table-data

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -12,6 +12,8 @@ body {
   --color-red-hover: rgb(240, 100, 100);
   --color-blue: rgb(30, 160, 200);
   --color-blue-hover: rgb(100, 160, 200);
+  --color-green: rgb(100, 210, 0);
+  --color-green-hover: rgb(140, 240, 40);
 }
 
 .section {
@@ -20,4 +22,16 @@ body {
 
 h2 {
   font-size: 1.4rem;
+}
+
+.filter label{
+  margin-right: 0.6rem;
+}
+
+input, select{
+  height: 2rem;
+  min-width: 5rem;  
+  font-size: 1rem;
+  border: solid 1px var(--color-grey-hover);
+  border-radius: 0.25rem;
 }
