--- a/app/src/components/Menu/Menu.css
+++ b/app/src/components/Menu/Menu.css
@@ -7,11 +7,13 @@
   gap:0.3rem;
   color: var(--color-black);
   text-decoration: none;
+  width: 100%;
 
 }
 
 .menuOption label {
   cursor: pointer;
+  font-size: 1rem;
 }
 
 .menuOptionIcon {
