feat/login-and-register

--- a/frontend/src/pages/LogOrSignIn/LogOrSignIn.css
+++ b/frontend/src/pages/LogOrSignIn/LogOrSignIn.css
@@ -13,3 +13,12 @@
 .form h1 {
   color: var(--color-grey);
 }
+
+.changePage {
+  color: var(--color-blue);
+  cursor: pointer;
+}
+
+.changePage:hover {
+  color: var(--color-blue-hover)
+}
