feat/loading-page-and-google-login

--- a/frontend/src/components/Nav/Nav.css
+++ b/frontend/src/components/Nav/Nav.css
@@ -1,14 +1,35 @@
 .nav {
   display: flex;
   justify-content: space-between;
-  padding: 0.5rem 0.5rem 0.5rem 1.5rem;
+  align-items: center;
+  padding: 0.2rem 0.5rem 0.2rem 0.5rem;
+
   background-color: var(--color-black);
 }
 
+.navTitleContainer {
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+  color: var(--color-grey-hover);
+}
+
 .navTitle {
+  width: auto;
   font-size: 1.8em;
   color:var(--color-white);
   text-decoration: none !important;
+}
+
+.navTitle:hover {
+  color: var(--color-white-hover);
+}
+
+.navEmail {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 80vw;
 }
 
 .addBtn {
