--- a/frontend/src/pages/LogOrSignIn/LogOrSignIn.css
+++ b/frontend/src/pages/LogOrSignIn/LogOrSignIn.css
@@ -1,24 +1,37 @@
 .form {
-  grid-template-columns: 100%;
-  max-width: 20rem;
+	grid-template-columns: 100%;
+	max-width: 20rem;
 }
 
 .logOrSignInContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center; 
-  height: calc(100vh - 3.6rem);
+	display: flex;
+  flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: calc(100vh - 3.6rem);
 }
 
 .form h1 {
-  color: var(--color-grey);
+	color: var(--color-grey);
 }
 
 .changePage {
-  color: var(--color-blue);
-  cursor: pointer;
+	color: var(--color-blue);
+	cursor: pointer;
 }
 
 .changePage:hover {
-  color: var(--color-blue-hover)
+	color: var(--color-blue-hover);
+}
+
+.googleBtn {
+	display: flex;
+  justify-content: center;
+  width: 90vw;
+  max-width: 13rem;
+  gap: 0;
+}
+
+.googleBtn div {
+  margin-right: 0 !important;
 }
